--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ repositories {
 }
 
 dependencies {
+	implementation("org.apache.tomcat.embed:tomcat-embed-jasper:11.0.9")
+	implementation "org.apache.tomcat.embed:tomcat-embed-jasper"
 	implementation("org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4")
 	implementation("com.zaxxer:HikariCP:6.2.1")
 	implementation("com.oracle.database.jdbc:ojdbc11:21.11.0.0")
